Fix refresh icon alignment so it also works on iPad (#1756)

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -1133,9 +1133,8 @@ label.switch
 #ctrl-modal #firmware-refresh button,
 #ctrl-modal #package-refresh button
 {
-    position: relative;
-    top: -1px;
-    left: 3px;
+    margin: 3px 0 0 3px;
+    padding: 0;
     min-width: 16px;
     height: 16px;
     border: 0;
